--- a/kafka-demo-3/ingest-k8s-metrics-to-influxdb/config/telegraf.conf
+++ b/kafka-demo-3/ingest-k8s-metrics-to-influxdb/config/telegraf.conf
@@ -15,10 +15,9 @@
 # Read metrics from Kafka topics
 [[inputs.kafka_consumer]]
   ## Kafka brokers.
-  brokers = ["localhost:9092"]
-
+  brokers = ['10.11.65.187:9092','10.11.65.187:9093','10.11.65.187:9094']
   ## Topics to consume.
-  topics = ["telegraf"]
+  topics = ["k8s-metrics"]
 
   ## When set this tag will be added to all metrics with the topic as the value.
   # topic_tag = ""
@@ -112,9 +111,11 @@
   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md
   data_format = "influx"
   
-[[outputs.influxdb]]
-urls = ["http://192.168.0.110:8086"]
-database = "telegraf"
+[[outputs.influxdb_v2]]
+urls = ["http://10.11.67.81:8086"]
+# database = "k8s-stg"
+organization = "CCS"
+bucket = "k8s-metrics"
 timeout = "5s"
-username = "telegraf"
-password = "Welcome1"
+username = "coc"
+password = "TldhTl1!"
