--- a/kafka-demo-3/ingest-k8s-metrics-to-influxdb2/config/telegraf.conf
+++ b/kafka-demo-3/ingest-k8s-metrics-to-influxdb2/config/telegraf.conf
@@ -109,7 +109,9 @@
   ## Each data format has its own unique set of configuration options, read
   ## more about them here:
   ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_INPUT.md
-  data_format = "influx"
+  # data_format = "influx"
+  data_type = "string"
+  data_format = "value"
   
 [[outputs.influxdb_v2]]
 urls = ["http://10.11.67.81:8086"]
@@ -117,5 +119,6 @@ urls = ["http://10.11.67.81:8086"]
 organization = "CCS"
 bucket = "k8s-metrics"
 timeout = "5s"
-username = "coc"
-password = "TldhTl1!"
+#username = "coc"
+#password = "TldhTl1!"
+token = "T9NROHMS7027kgtLa3Bq3v3oNNrB9gscIi85Zvin2cd0vIaIo-eO8J-Q0TNjg_jEEe-NgI_RPWgXcoQdEc-QTA=="
