--- a/kafka-demo-3/data_processor/Dockerfile
+++ b/kafka-demo-3/data_processor/Dockerfile
@@ -7,6 +7,7 @@ COPY requirements.txt requirements.txt
 RUN python3 -m pip install --upgrade pip
 RUN pip3 install -r requirements.txt
 
+COPY config.ini .
 COPY data_processor.py .
 
 CMD [ "python3", "data_processor.py", "worker", "-p", "10001"]
