--- a/kafka-demo-3/data_processor/docker-compose-data-processor.yml
+++ b/kafka-demo-3/data_processor/docker-compose-data-processor.yml
@@ -1,26 +1,11 @@
 version: '3'
 services:
-  data-requester:
-    hostname: data-requester
-    container_name: data-requester
-    image: jungfrau70/data-requester:0.1
-    # networks:
-    #   netgroup:
-    #     ipv4_address: 172.18.0.101
-    # environment:
-    #   kafka1: 172.17.38.194
-    #   kafka2: 172.17.38.194
-    #   kafka3: 172.17.38.194
+  data-processor:
+    hostname: data-processor
+    container_name: data-processor
+    image: jungfrau70/data-processor:0.6
+    restart: always
     deploy:
       resources:
         limits:
           memory: 1g
-# networks:
-#   netgroup:
-#     name: netgroup
-#     driver: bridge
-#     attachable: true
-#     ipam:
-#       config:
-#         - subnet: 172.18.0.0/16
-#           gateway: 172.18.0.1
