--- a/kafka-demo-3/data_backend/Dockerfile
+++ b/kafka-demo-3/data_backend/Dockerfile
@@ -10,4 +10,4 @@ RUN pip3 install -r requirements.txt
 COPY config.ini .
 COPY data_processor.py .
 
-CMD [ "python3", "data_processor.py", "worker", "-p", "10001"]
+CMD [ "python3", "main.py", "worker", "-p", "10001"]
