--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@ kafka/venv/*/*/*
 kafka-demo-3/*/venv/*
 kafka-demo-3/*/venv/*/*
 kafka-demo-3/*/venv/*/*/*
+kafka-demo-3/*/venv/*/*/*/*
 kafka-demo-3/venv/*
 kafka-demo-3/venv/*/*
 kafka-demo-3/venv/*/*/*
+kafka-demo-3/venv/*/*/*/*
 kafka/data/
 kafka/data/*
 kafka/data/*/*
