--- a/kafka-demo-3/data_processor/docker-compose-data-processor.yml
+++ b/kafka-demo-3/data_processor/docker-compose-data-processor.yml
@@ -1,11 +1,14 @@
-version: '3'
+version: '3.8'
 services:
+  # Agent in deployment
   data-processor:
     hostname: data-processor
     container_name: data-processor
-    image: jungfrau70/data-processor:0.6
+    # image: jungfrau70/data-processor:0.6
+    build: .
     restart: always
+    tty: true
     deploy:
       resources:
         limits:
-          memory: 1g
+          memory: 1g              
