--- a/kafka-demo-3/ingest-k8s-metrics-to-influxdb2/config/telegraf.conf
+++ b/kafka-demo-3/ingest-k8s-metrics-to-influxdb2/config/telegraf.conf
@@ -16,13 +16,13 @@
 [[inputs.kafka_consumer]]
   ## Kafka brokers.
   brokers = ['192.168.171.132:9092','192.168.171.132:9093','192.168.171.132:9094']
-  topics = ["k8s-metrics"]
+  topics = ["kr-1-stg-k8s-metrics"]
   max_message_len = 1000000
   data_format = "influx"
 
 [[outputs.influxdb_v2]]
 urls = ["http://192.168.171.132:8086"]
 organization = "COC"
-bucket = "k8s-metrics"
+bucket = "kr-1-stg-k8s-metrics"
 timeout = "5s"
 token = "T9NROHMS7027kgtLa3Bq3v3oNNrB9gscIi85Zvin2cd0vIaIo-eO8J-Q0TNjg_jEEe-NgI_RPWgXcoQdEc-QTA=="
